# breezerun

./: ASSISTANT_UI_INTEGRATION_PLAN.md  ASSISTANT_UI_INTEGRATION_SUMMARY.md  CONTRIBUTING.md  PHASE4_SUMMARY.md  PHASE4_TEST_REPORT.md  README.md  REFACTORING_PLAN.md  start.ps1  start.sh
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: projects.py  settings.py
backend/app/api/websocket/: chat_handler.py  streaming_manager.py  task_registry.py
backend/app/core/: config.py
backend/app/core/agent/: __init__.py  executor.py
backend/app/core/agent/tools/: __init__.py  ast_edit_tool.py  ast_grep_tool.py  base.py  bash_tool.py  environment_tool.py  file_tools.py  (+3 more)
backend/app/core/llm/: provider.py
backend/app/core/sandbox/: container.py  manager.py
backend/app/core/storage/: local_storage.py  s3_storage.py  storage_factory.py  volume_storage.py  workspace_storage.py
backend/app/models/database/: agent_config.py  chat_session.py
backend/app/models/schemas/: agent.py  chat.py
backend/app/services/: __init__.py  event_bus.py  message_orchestrator.py  message_persistence.py  streaming_buffer.py
backend/migrations/: migrate_environment_to_sessions.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/routes/: test_projects.py
backend/tests/core/: test_config.py
backend/tests/integration/: __init__.py  conftest.py  test_api_agent_config.py  test_database.py  test_environment_setup.py  test_project_lifecycle.py
backend/tests/unit/: test_agent_streaming.py  test_cancel_streaming.py
(+126 files in other folders)
