[tool.poetry]
name = "open-codex-gui-backend"
version = "0.1.0"
description = ""
authors = ["Ziyang Song <soongziyang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11" # Specify the Python version compatibility
fastapi = "^0.121.2"
pydantic-settings = "^2.12.0"
aiosqlite = "^0.21.0"
litellm = "^1.80.0"
docker = "^7.1.0"
python-multipart = "^0.0.20"
uvicorn = "^0.38.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
